@@ -13,6 +13,7 @@ export(plotReadAccumulation)
 export(plotReadCategoryCounts)
 export(plotReadCategoryQuals)
 export(plotReadTypeProduction)
+export(readFast5Log)
 export(readFast5Summary)
 exportClasses(Fast5Summary)
 exportMethods("[")
